welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: illegal start of simple expression
for (j<-0 to getMondeLargeur()-1)){
                                 ^